[project]
name = "cs484-wsss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "segment-anything",
    "termcolor>=3.3.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.4",
]

[tool.uv.sources]
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }
